--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Welcome to git repo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolore vel ducimus consectetur aliquid vero magni quod sequi, quam beatae itaque enim facilis odio magnam sint delectus nulla quo quis.</p>
 </body>
 </html>
